# talon-core

./: .gitignore  .gitlab-ci.yml  .instructions.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  README_zh.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rustfmt.toml
.github/workflows/: docs.yml  publish-bin.yml  publish-sdk.yml  release.yml
docs/: BENCHMARK_RESULTS.md
gui/: index.html  package.json  pnpm-lock.yaml  postcss.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
gui/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
gui/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/src/: main.rs
scripts/: deploy-docs.sh  release.sh
sdk/: README.md
src/: backup.rs  cli.rs  cli_commands.rs  diagnostics.rs  error.rs  ffi.rs  ffi_bin.rs  import.rs  instance.rs  lib.rs  main.rs  tests_talon.rs  tui.rs
src/cluster/: mod.rs  operation.rs  oplog.rs  oplog_tests.rs  protocol.rs  receiver.rs  replayer.rs  sender.rs  sender_tests.rs
src/cross/: distance.rs  geo_vector.rs  graph_fts.rs  graph_vector.rs  mod.rs  triple.rs
src/ffi_exec/: fts.rs  geo.rs  graph.rs  mod.rs  mq.rs  tests.rs  ts.rs
src/fts/: admin.rs  aggregate.rs  bm25.rs  bool_query.rs  dict_cn.txt  es_bulk.rs  fuzzy.rs  hmm.rs  hybrid.rs  jieba.rs  mod.rs  multi_field.rs  phrase.rs  posting.rs  range.rs  regexp.rs  term.rs  tests.rs  tokenizer.rs  wildcard.rs
src/geo/: geohash.rs  mod.rs  search.rs  tests.rs
src/kv/: mod.rs  (+1 more)
tests/: bench.rs  bench_embedded_full.rs  bench_engines_1m.rs  bench_fsync.rs  bench_fts_full.rs  bench_geo_full.rs  bench_graph.rs  bench_kv_advanced.rs  bench_kv_full.rs  bench_million.rs  bench_mq_full.rs  bench_network_full.rs  bench_node.rs  bench_p0.rs  bench_perf_report.rs  bench_sql_advanced.rs  bench_sql_full.rs  bench_ts_full.rs  bench_vector_full.rs  bench_vs_sqlite.rs  bench_综合.rs  cluster_integration.rs  concurrency_stress.rs  crash_recovery.rs  oplog_e2e.rs  server_e2e.rs  test_geopoint.rs  test_raw_create.rs  test_raw_open.rs  test_raw_open_empty.rs
(+223 files in other folders)
